--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
             <video id="home">
                     <p>YOU DON'T HAVE A FUTURE HERE, BETTER JAPA ASAP😂😂😂</p>
  
-                <source src="make.mp4" type="video/mp4" autoplay>
+                <source src="mak.mp4" type="video/mp4" autoplay>
             </video>
             
             <a href="index.html" id="congrat" class="congrat">Home</a>
